syntax = "proto3";

package treecrdt.sync.v0;

// Shared types for Sync Protocol v0.
//
// Encoding notes:
// - NodeId.bytes MUST be exactly 16 bytes (big-endian u128). ROOT is 16 zero bytes.
// - TRASH is 16 bytes of 0xFF (big-endian u128::MAX).
// - ReplicaId.bytes is opaque (may be any length).
// - OpRef.bytes MUST be exactly 16 bytes (IBLT item width); derivation from opId is TBD.

message NodeId {
  bytes bytes = 1;
}

message ReplicaId {
  bytes bytes = 1;
}

message OpRef {
  bytes bytes = 1;
}

message OperationId {
  ReplicaId replica = 1;
  uint64 counter = 2;
}

message OperationMetadata {
  OperationId id = 1;
  uint64 lamport = 2;
}
